wip: countdown alarm and alert video stopped

--- a/static/record.html
+++ b/static/record.html
@@ -8,7 +8,8 @@
 
 <body>
   Iterspace Recording Stream
-  <video id="recordedStream"></video>
+  <video autoplay="true" id="recordedStream" width="600" height="400" muted="muted"></video>
+  <div id="recordingInterface"></div>
   <script src="record.js"></script>
 </body>
 </html>
