--- a/static/record.html
+++ b/static/record.html
@@ -5,11 +5,13 @@
     <title>Iterspace extension - Record Stream</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap"
+      rel="stylesheet">
   </head>
 
   <body>
-    <h1>Iterspace Recording Stream</h1>
-    <h3>(keep this tab open)</h3>
     <div id="recordingInterface"></div>
     <script src="record.js"></script>
   </body>
